      reflect user config now being stored in .bazaar (Hans Ulrich
      Niedermann)

  INTERNALS:
  
    * The internal storage of history, and logical branch identity have now
      been split into Branch, and Repository. The common locking and file 
      management routines are now in bzrlib.lockablefiles. 
      (Aaron Bentley, Robert Collins, Martin Pool)

    * Remove obsolete (and no-op) `decode` parameter to `Transport.get`.  
      (Martin Pool)

  TESTING:

    * SFTP tests now shortcut the SSH negotiation, reducing test overhead
      for testing SFTP protocol support. (Robey Pointer)

bzr 0.7rc1 2006-01-09

  CHANGES:

    * .bzrignore is excluded from exports, on the grounds that it's a bzr 
      internal-use file and may not be wanted.  (Jamie Wilkinson)

    * The "bzr directories" command were removed in favor of the new
      --kind option to the "bzr inventory" command.  To list all 
      versioned directories, now use "bzr inventory --kind directory".  
      (Johan Rydberg)

    * Under Windows configuration directory is now %APPDATA%\bazaar\2.0
      by default. (John Arbash Meinel)

    * The parent of Bzr configuration directory can be set by BZR_HOME
      environment variable. Now the path for it is searched in BZR_HOME, then
      in HOME. Under Windows the order is: BZR_HOME, APPDATA (usually
      points to C:\Documents and Settings\User Name\Application Data), HOME.
      (John Arbash Meinel)

    * Plugins with the same name in different directories in the bzr plugin
      path are no longer loaded: only the first successfully loaded one is
      used. (Robert Collins)

    * Use systems' external ssh command to open connections if possible.  
      This gives better integration with user settings such as ProxyCommand.
      (James Henstridge)

    * Sftp paths can now be relative, or local, according to the lftp
      convention. Paths now take the form:
      sftp://user:pass@host:port/~/relative/path
      or